# BoostServerExampleTask

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  conanprofile.txt
src/client/: CMakeLists.txt  main.cpp
src/client/include/: LogClientCLI.h
src/client/src/: LogClientCLI.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/include/: LogConnection.h  LogListener.h  LogServerCLI.h
src/server/src/: LogConnection.cpp  LogListener.cpp  LogServerCLI.cpp
src/utils/: CMakeLists.txt
src/utils/include/: AbstractCLI.h  CommandDescription.h  synchronized_io.h  utils.h
src/utils/src/: AbstractCLI.cpp  synchronized_io.cpp  utils.cpp
